Users and TodoLists endpoints fully working and fully tested, working on Todo endpoint
