# src/server.ts
@@ -1,6 +1,5 @@
 import express from 'express'
 import cors from 'cors'
-import todoRoutes from './api/todos/todo.routes'
 import userRoutes from './api/users/user.routes'
 import errorMiddleware from './middleware/error.middleware'
 import notFoundMiddleware from './middleware/notFound.middleware'
@@ -17,7 +16,6 @@ app.use(express.json())
 app.use(express.urlencoded({ extended: true }))
 
 app.use('/api/users', userRoutes)
-app.use('/api/todos', todoRoutes)
 
 /**
  * Swagger
